[project]
name = "cs488llm-hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.5.2",
    "bitsandbytes>=0.45.3",
    "pillow>=11.1.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers", rev = "v4.49.0-Gemma-3" }
